demo_12/securitygroup.tf
resource "aws_security_group" "allow-ssh" {
    vpc_id = aws_vpc.main.id
    name = "allow-ssh"



    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_block = ["0.0.0.0/0"]
    }

    ingress {
        from_port = 243
        to_port = 243
        protocol = "tcp"
        cidr_block = ["0.0.0.0/0"]
    }


    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_block = ["0.0.0.0/0"]
    }

    egress {
        from_port = 0
        to-port = 0
        protocol = "-1"
        cidr_block = ["0.0.0.0/0"]
    }


    tags = {
        Name = "allow- ssh"
    }
}


resource "aws_security_group" "allow_mariaDB" {
    vpc = aws_vpc.main.id
    name = "allow-mariaDB"

    ingress {
    from_port = 3306
    to_port = 3306
    protocol = "tcp"
    securityu_groups = [aws_security_group.allow-ssh.id]
    }


    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_block = ["0.0.0.0/0"]
        self = "true"
    } 


    tags = {
        Name = "allow-mariaDB"
    }
}
